@@ -1,4 +1,7 @@
 
+  22 Apr 2015; Justin Lecher <jlec@gentoo.org> lh-sources-4.0.0.ebuild:
+  sys-kernel/lh-sources: Fix for aufs4
+
 *lh-sources-4.0.0 (22 Apr 2015)
 
   22 Apr 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-4.0.0.ebuild,
